k8s/devops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: devops.local
    http:
      paths:
      # Backend API
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      # Frontend SPA (NO rewrite)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
